# ReelForge-YAML

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/: pull_request_template.md
docs/: DEMO_VIDEO_SCRIPT.md  EVALUATION.md  JD_DEMO_SCRIPT.md  JOB_ALIGNMENT.md  PR_DELIVERY_PLAN.md  SUBMISSION_CHECKLIST.md  YAML_SCHEMA.md
reports/: golden_benchmark.json  golden_benchmark.md
samples/: deepseek_shadow_contract_3ch_optimized.yaml  deepseek_shadow_contract_3ch_output.yaml  eval_novel_hospital_will_3ch.txt  eval_novel_midnight_refund_3ch.txt  eval_novel_palace_lantern_3ch.txt  eval_novel_quiet_transition_3ch.txt  eval_novel_shadow_contract.txt  eval_novel_shadow_contract_3ch.txt  golden_dataset.yaml  sample_novel_three_chapters.txt
scripts/: evaluate_yaml.py  run_deepseek_generation.py  run_golden_benchmark.py
src/shortdrama_yaml/: __init__.py  chapter_parser.py  critic.py  evaluator.py  iteration.py  llm_client.py  metadata_inference.py  offline_generator.py  pipeline.py  prompts.py  schema.py  scratchpad.py  showcase.py  yaml_io.py
tests/: test_chapter_parser.py  test_evaluator.py  test_golden_benchmark.py  test_golden_dataset.py  test_metadata_inference.py  test_pipeline_offline.py  test_schema.py  test_scratchpad_iteration.py  test_showcase.py
