[project]
name = "reelforge-yaml"
version = "0.1.0"
description = "Schema-first AI workbench for adapting web novels into vertical short-drama YAML scripts."
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.57.0",
    "pydantic>=2.12.0",
    "PyYAML>=6.0.0",
    "openai>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
